--- a/start_grant/templates/_loan_info.html
+++ b/start_grant/templates/_loan_info.html
@@ -83,9 +83,9 @@
                     <div class="col-xs-3">
                         <select style="width: 100%;" name="refund_type_id" id="refund_type_id"
                                 value="{{ customer_request.complete_information.refund_type_id }}">
-{#                            {% for refund_type in refund_types %}#}
-{#                                <option value="{{ refund_type.id }}">{{ refund_type.local_name }}</option>#}
-{#                            {% endfor %}#}
+                     {% for refund_type in refund_types %}
+                             <option value="{{ refund_type.id }}">{{ refund_type.local_name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                 </div>
