--- a/static/css/base.css
+++ b/static/css/base.css
@@ -547,3 +547,14 @@ form .row {
 }
 
 /******************************/
+
+/******** guarantor ***********/
+
+.new_guarantor{
+
+}
+
+.new_guarantor:hover{
+    background-color: #c4c4ff;
+}
+/******************************/
