--- a/static/datatables/css/demo_table.css
+++ b/static/datatables/css/demo_table.css
@@ -183,23 +183,23 @@ table.display td.center {
  */
 
 .sorting_asc {
-	background: url('../images/sort_asc.png') no-repeat center left;
+	background: url('../images/sort_asc.png') no-repeat center left 10px;
 }
 
 .sorting_desc {
-	background: url('../images/sort_desc.png') no-repeat center left;
+	background: url('../images/sort_desc.png') no-repeat center left 10px;
 }
 
 .sorting {
-	background: url('../images/sort_both.png') no-repeat center left;
+	background: url('../images/sort_both.png') no-repeat center left 10px;
 }
 
 .sorting_asc_disabled {
-	background: url('../images/sort_asc_disabled.png') no-repeat center left;
+	background: url('../images/sort_asc_disabled.png') no-repeat center left 10px;
 }
 
 .sorting_desc_disabled {
-	background: url('../images/sort_desc_disabled.png') no-repeat center left;
+	background: url('../images/sort_desc_disabled.png') no-repeat center left 10px;
 }
  
 table.display thead th:active,
