--- a/user_management/templates/login.html
+++ b/user_management/templates/login.html
@@ -45,7 +45,7 @@
                                             گذر واژه
                                         </div>
                                         <div class="col-xs-6">
-                                            <input type="text" class="form-control" name="password" id="password"
+                                            <input type="password" class="form-control" name="password" id="password"
                                                    required
                                                    minlength="5"
                                                    data-validation-minlength-message="حداقل پنج کاراکتر لازم است"
