--- a/guarantor/templates/guarantor_list.html
+++ b/guarantor/templates/guarantor_list.html
@@ -1,70 +1,78 @@
 {% extends 'base_dashboard.html' %}
+{% load i18n %}
 
 {% block content %}
+
     <div style="border: 1px solid #dddddd; padding: 15px 30px 15px 30px;border-radius: 5px;"
          class="form-group">
-        <table id="guarantors" class="display" cellpadding="0" cellspacing="0" border="0">
-            <thead>
-            <tr>
-                <td>شماره ضامن</td>
-                <td>نام</td>
-                <td>نام خانوادگی</td>
-                <td>وصیغه</td>
-                <td></td>
-            </tr>
-            </thead>
-            <tbody>
-            {% for guarantor in guarantors %}
-                <tr id="{{ guarantor.customer.customer_code }}">
-                    {% comment %}                    class="{% if request.status == 'intro' %}
+
+        {% if message %}
+            {% trans message %}
+        {% else %}
+
+            <table id="guarantors" class="display" cellpadding="0" cellspacing="0" border="0">
+                <thead>
+                <tr>
+                    <td>شماره ضامن</td>
+                    <td>نام</td>
+                    <td>نام خانوادگی</td>
+                    <td>وصیغه</td>
+                    <td></td>
+                </tr>
+                </thead>
+                <tbody>
+                {% for guarantor in guarantors %}
+                    <tr id="{{ guarantor.customer.customer_code }}">
+                        {% comment %}                    class="{% if request.status == 'intro' %}
             warning
             {% endif %}">{% endcomment %}
-                    <td>{{ guarantor.customer.customer_code }}</td>
-                    <td>{{ guarantor.customer.realcustomerinformation.name }}</td>
-                    <td>{{ guarantor.customer.realcustomerinformation.last_name }}</td>
-                    <td>{{ guarantor.vasighe_type.local_name }}</td>
-                    <td>
-                        <div class="row">
-                            <div class="col-xs-2">
-                                <form style="width: 10px;" method="post"
-                                      action="{% url 'guarantor:remove' request_id guarantor.id %}">
-                                    {% csrf_token %}
-                                    <button type="submit" class="glyphicon glyphicon-remove remove"
-                                            style="padding-right: 10px;color: red;">
-                                    </button>
-                                </form>
+                        <td>{{ guarantor.customer.customer_code }}</td>
+                        <td>{{ guarantor.customer.realcustomerinformation.name }}</td>
+                        <td>{{ guarantor.customer.realcustomerinformation.last_name }}</td>
+                        <td>{{ guarantor.vasighe_type.local_name }}</td>
+                        <td>
+                            <div class="row">
+                                <div class="col-xs-2">
+                                    <form style="width: 10px;" method="post"
+                                          action="{% url 'guarantor:remove' request_id guarantor.id %}">
+                                        {% csrf_token %}
+                                        <button type="submit" class="glyphicon glyphicon-remove remove"
+                                                style="padding-right: 10px;color: red;">
+                                        </button>
+                                    </form>
+                                </div>
+                                <div class="col-xs-3">
+                                    <form style="width: 10px;" method="get"
+                                          action="{% url 'guarantor:register' request_id %}">
+                                        <input type="hidden" name="customer_id"
+                                               value="{{ guarantor.customer.customer_code }}"/>
+                                        <button type="submit" class="glyphicon glyphicon-edit edit"
+                                                style="padding-right: 10px;color: #2244ff;">
+                                        </button>
+                                    </form
+                                </div>
                             </div>
-                            <div class="col-xs-3">
-                                <form style="width: 10px;" method="get"
-                                      action="{% url 'guarantor:register' request_id %}">
-                                    <input type="hidden" name="customer_id"
-                                           value="{{ guarantor.customer.customer_code }}"/>
-                                    <button type="submit" class="glyphicon glyphicon-edit edit"
-                                            style="padding-right: 10px;color: #2244ff;">
-                                    </button>
-                                </form
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-            <tfoot>
-            </tfoot>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+                <tfoot>
+                </tfoot>
 
-        </table>
-    <div class="row new_guarantor" style="margin-top:35px;" id="new_real_guarantor">
-        <div class="col-xs-3">
-            <span class="glyphicon glyphicon-plus" style="color:#00dd00;" ></span>
-            ضامن حقیقی جدید
-        </div>
-    </div>
-     <div class="row new_guarantor" style="margin-top:15px;"  id="new_enterprise_guarantor">
-        <div class="col-xs-3">
-            <span class="glyphicon glyphicon-plus" style="color:#00dd00;" ></span>
-            ضامن حقیقی جدید
-        </div>
-    </div>
+            </table>
+            <div class="row new_guarantor" style="margin-top:35px;" id="new_real_guarantor">
+                <div class="col-xs-3">
+                    <span class="glyphicon glyphicon-plus" style="color:#00dd00;"></span>
+                    ضامن حقیقی جدید
+                </div>
+            </div>
+            <div class="row new_guarantor" style="margin-top:15px;" id="new_enterprise_guarantor">
+                <div class="col-xs-3">
+                    <span class="glyphicon glyphicon-plus" style="color:#00dd00;"></span>
+                    ضامن حقیقی جدید
+                </div>
+            </div>
+        {% endif %}
     </div>
 
 {% endblock %}
@@ -73,11 +81,11 @@
     <script type="text/javascript">
         $(window).ready(function () {
 
-            $('#new_real_guarantor').click(function(){
+            $('#new_real_guarantor').click(function () {
                 window.location = '{% url 'guarantor:register' request_id %}';
             });
 
-            $('#new_enterprise_guarantor').click(function(){
+            $('#new_enterprise_guarantor').click(function () {
                 window.location = '{% url 'guarantor:register' request_id %}';
             });
 
