--- a/start_grant/templates/_enterprise_board_of_directors.html
+++ b/start_grant/templates/_enterprise_board_of_directors.html
@@ -107,16 +107,16 @@
                         </td>
                         <td>
                             {% if director.sign_permission %}
-                                <span class="glyphicon glyphicon-ok"></span>
+                                <span class="glyphicon glyphicon-ok" style="color:green;"></span>
                             {% else %}
-                                <span class="glyphicon glyphicon-remove"></span>
+                                <span class="glyphicon glyphicon-remove" style="color:red;"></span>
                             {% endif %}
                         </td>
                         <td>
                             {% if director.sign_enough %}
-                                <span class="glyphicon glyphicon-ok"></span>
+                                <span class="glyphicon glyphicon-ok" style="color:green;"></span>
                             {% else %}
-                                <span class="glyphicon glyphicon-remove"></span>
+                                <span class="glyphicon glyphicon-remove" style="color:red;"></span>
                             {% endif %}
                         </td>
                     </tr>
