--- a/start_grant/templates/enterprise_submit_data.html
+++ b/start_grant/templates/enterprise_submit_data.html
@@ -5,18 +5,18 @@
     <div style="border: 1px solid #dddddd;border-radius: 5px;"
          class="form-group">
     <div class="row rose-progress-bar" style="padding-top:15px;padding-bottom:15px; margin:0px;">
-        <div class="col-xs-2
+    <div class="col-xs-2
             {% if customer_info %}
             completed
             {% else %}
             pending
             {% endif %}
             rose-progress-bar-cell" id="customer_info">
-            <div class="row">
-                <div class="col-xs-8">
-                    اطلاعات ثبتی شرکت
-                </div>
-                <div id="customer_info_state" class="col-xs-1">
+        <div class="row">
+            <div class="col-xs-8">
+                اطلاعات ثبتی شرکت
+            </div>
+            <div id="customer_info_state" class="col-xs-1">
                         <span id="failed" class="glyphicon glyphicon-remove" style="color: red;
                                  display: none;
 
@@ -26,24 +26,24 @@
                                     display: none;
                                 {% endif %}
                                 "></span>
-                </div>
-                <div id="customer_info_loader" class="col-xs-1">
+            </div>
+            <div id="customer_info_loader" class="col-xs-1">
 
-                </div>
             </div>
         </div>
-        <div class="col-xs-2
+    </div>
+    <div class="col-xs-2
             {% if customer_info.director_set %}
             completed
             {% else %}
             pending
             {% endif %}
             rose-progress-bar-cell" id="director_info">
-            <div class="row">
-                <div class="col-xs-8">
-                    اعضا هیات مدیره
-                </div>
-                <div id="board_of_director_state" class="col-xs-1">
+        <div class="row">
+            <div class="col-xs-8">
+                اعضا هیات مدیره
+            </div>
+            <div id="board_of_director_state" class="col-xs-1">
                         <span id="failed" class="glyphicon glyphicon-remove" style="color: red;
                                  display: none;
 
@@ -53,13 +53,13 @@
                                     display: none;
                                 {% endif %}
                                 "></span>
-                </div>
-                <div id="board_of_director_loader" class="col-xs-1">
+            </div>
+            <div id="board_of_director_loader" class="col-xs-1">
 
-                </div>
             </div>
         </div>
-        <div class="col-xs-2
+    </div>
+    <div class="col-xs-2
 
              {% if customer_info.contact_info %}
                 completed
@@ -68,23 +68,23 @@
              {% endif %}
 
              rose-progress-bar-cell" id="contact_info">
-            <div class="row">
-                <div class="col-xs-8">
-                    اطلاعات تماس
-                </div>
-                <div id="contact_info_state" class="col-xs-1">
-                    <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+        <div class="row">
+            <div class="col-xs-8">
+                اطلاعات تماس
+            </div>
+            <div id="contact_info_state" class="col-xs-1">
+                <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
                         <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
                                 {% if not customer_info.contact_info %}
                                     display: none;"></span>
                                 {% endif %}
-                </div>
-                <div id="activity_info_loader" class="col-xs-1">
-                </div>
+            </div>
+            <div id="activity_info_loader" class="col-xs-1">
             </div>
         </div>
+    </div>
 
-        <div class="col-xs-2
+    <div class="col-xs-2
 
              {% if customer_info.activity_info %}
                 completed
@@ -93,45 +93,45 @@
              {% endif %}
 
              rose-progress-bar-cell" id="activity_info">
-            <div class="row">
-                <div class="col-xs-8">
-                    زمینه فعالیت
-                </div>
-                <div id="activity_info_state" class="col-xs-1">
-                    <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+        <div class="row">
+            <div class="col-xs-8">
+                زمینه فعالیت
+            </div>
+            <div id="activity_info_state" class="col-xs-1">
+                <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
                         <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
                                 {% if not customer_info.activity_info %}
                                     display: none;"></span>
                                 {% endif %}
-                </div>
-                <div id="activity_info_loader" class="col-xs-1">
-                </div>
+            </div>
+            <div id="activity_info_loader" class="col-xs-1">
             </div>
         </div>
-        {#            <div class="col-xs-2#}
-        {#             {% if customer_info.job_info %}#}
-        {#                completed#}
-        {#             {% else %}#}
-        {#                pending#}
-        {#             {% endif %}#}
-        {#             rose-progress-bar-cell" id="job_info">#}
-        {#                <div class="row">#}
-        {#                    <div class="col-xs-8">#}
-        {#                        اطلاعات شغلی#}
-        {#                    </div>#}
-        {#                    <div id="job_info_state" class="col-xs-1">#}
-        {#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
-        {#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
-        {#                                {% if not customer_info.job_info %}#}
-        {#                                    display: none;#}
-        {#                                {% endif %}#}
-        {#                                "></span>#}
-        {#                    </div>#}
-        {#                    <div id="job_info_loader" class="col-xs-1">#}
-        {#                    </div>#}
-        {#                </div>#}
-        {#            </div>#}
-        <div class="col-xs-2
+    </div>
+    {#            <div class="col-xs-2#}
+    {#             {% if customer_info.job_info %}#}
+    {#                completed#}
+    {#             {% else %}#}
+    {#                pending#}
+    {#             {% endif %}#}
+    {#             rose-progress-bar-cell" id="job_info">#}
+    {#                <div class="row">#}
+    {#                    <div class="col-xs-8">#}
+    {#                        اطلاعات شغلی#}
+    {#                    </div>#}
+    {#                    <div id="job_info_state" class="col-xs-1">#}
+    {#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
+    {#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
+    {#                                {% if not customer_info.job_info %}#}
+    {#                                    display: none;#}
+    {#                                {% endif %}#}
+    {#                                "></span>#}
+    {#                    </div>#}
+    {#                    <div id="job_info_loader" class="col-xs-1">#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#            </div>#}
+    <div class="col-xs-2
                          {% if customer_request.complete_information %}
                                completed
                          {% else %}
@@ -139,69 +139,94 @@
                          {% endif %}
 
                          rose-progress-bar-cell" id="loan_info">
-            <div class="row">
-                <div class="col-xs-8">
-                    اطلاعات تسهیلات
-                </div>
-                <div id="loan_info_state" class="col-xs-1">
-                    <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+        <div class="row">
+            <div class="col-xs-8">
+                اطلاعات تسهیلات
+            </div>
+            <div id="loan_info_state" class="col-xs-1">
+                <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
                                     <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
                                             {% if not customer_request.complete_information %}
                                                 display: none;
                                             {% endif %}
                                             "></span>
-                </div>
-                <div id="loan_info_loader" class="col-xs-1">
-                </div>
+            </div>
+            <div id="loan_info_loader" class="col-xs-1">
             </div>
         </div>
-        {#                        <div class="col-xs-2#}
-        {#             {% if customer_info.asset_info %}#}
-        {#             completed#}
-        {#             {% else %}#}
-        {#             pending#}
-        {#             {% endif %}#}
-        {#             rose-progress-bar-cell" id="asset_info" style="padding-right: 0px;">#}
-        {#                <div class="row">#}
-        {#                    <div class="col-xs-9">#}
-        {#                        دارایی ها و بدهی ها#}
-        {#                    </div>#}
-        {#                    <div id="asset_info_state" class="col-xs-1">#}
-        {#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
-        {#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
-        {#                                {% if not customer_info.asset_info %}#}
-        {#                                    display: none;#}
-        {#                                {% endif %}#}
-        {#                                "></span>#}
-        {#                    </div>#}
-        {#                    <div id="asset_info_loader" class="col-xs-1">#}
-        {#                    </div>#}
-        {#                </div>#}
-        {#            </div>#}
-        {#            <div class="col-xs-2#}
-        {#             {% if customer_info.bank_income_info %}#}
-        {#             completed#}
-        {#             {% else %}#}
-        {#             pending#}
-        {#             {% endif %}#}
-        {##}
-        {#             rose-progress-bar-cell" id="bank_income_info">#}
-        {#                <div class="row">#}
-        {#                    <div class="col-xs-9">#}
-        {#                        بانکها و درآمد#}
-        {#                    </div>#}
-        {#                    <div id="bank_income_state" class="col-xs-1">#}
-        {#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
-        {#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
-        {#                                {% if not customer_info.bank_income_info %}#}
-        {#                                    display: none;#}
-        {#                                {% endif %}#}
-        {#                                "></span>#}
-        {#                    </div>#}
-        {#                    <div id="bank_income_loader" class="col-xs-1">#}
-        {#                    </div>#}
-        {#                </div>#}
-        {#            </div>#}
+    </div>
+
+    <div class="col-xs-2
+                         {% if customer_request.vasighe_information %}
+                               completed
+                         {% else %}
+                                pending
+                         {% endif %}
+
+                         rose-progress-bar-cell" id="vasighe_info">
+        <div class="row">
+            <div class="col-xs-8">
+                بانکهای طرف معامله
+            </div>
+            <div id="vasighe_info_state" class="col-xs-1">
+                <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+                                    <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
+                                            {% if not customer_request.vasighe_information %}
+                                                display: none;
+                                            {% endif %}
+                                            "></span>
+            </div>
+            <div id="vasighe_info_loader" class="col-xs-1">
+            </div>
+        </div>
+    </div>
+    {#                        <div class="col-xs-2#}
+    {#             {% if customer_info.asset_info %}#}
+    {#             completed#}
+    {#             {% else %}#}
+    {#             pending#}
+    {#             {% endif %}#}
+    {#             rose-progress-bar-cell" id="asset_info" style="padding-right: 0px;">#}
+    {#                <div class="row">#}
+    {#                    <div class="col-xs-9">#}
+    {#                        دارایی ها و بدهی ها#}
+    {#                    </div>#}
+    {#                    <div id="asset_info_state" class="col-xs-1">#}
+    {#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
+    {#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
+    {#                                {% if not customer_info.asset_info %}#}
+    {#                                    display: none;#}
+    {#                                {% endif %}#}
+    {#                                "></span>#}
+    {#                    </div>#}
+    {#                    <div id="asset_info_loader" class="col-xs-1">#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#            <div class="col-xs-2#}
+    {#             {% if customer_info.bank_income_info %}#}
+    {#             completed#}
+    {#             {% else %}#}
+    {#             pending#}
+    {#             {% endif %}#}
+    {##}
+    {#             rose-progress-bar-cell" id="bank_income_info">#}
+    {#                <div class="row">#}
+    {#                    <div class="col-xs-9">#}
+    {#                        بانکها و درآمد#}
+    {#                    </div>#}
+    {#                    <div id="bank_income_state" class="col-xs-1">#}
+    {#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
+    {#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
+    {#                                {% if not customer_info.bank_income_info %}#}
+    {#                                    display: none;#}
+    {#                                {% endif %}#}
+    {#                                "></span>#}
+    {#                    </div>#}
+    {#                    <div id="bank_income_loader" class="col-xs-1">#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#            </div>#}
     </div>
     <div class="row" id="next_level" style="display: none; padding-bottom: 1%;">
         <form action="{% url 'grant:submit' customer_request.id %}" method="post">
@@ -233,8 +258,8 @@
                 <div class="rose-submit-container collapse" id="loan_info_container">
                     {% include '_loan_info.html' %}
                 </div>
-                <div class="rose-submit-container collapse" id="asset_info_container">
-                    {% include '_asset_info.html' %}
+                <div class="rose-submit-container collapse" id="vasighe_info_container">
+                    {% include '_enterprise_bank_info.html' %}
                 </div>
                 <div class="rose-submit-container collapse" id="bank_income_info_container">
                     {% include '_bank_income_info.html' %}
@@ -427,14 +452,13 @@
                 var sign_permission = item.attr('sign_permission');
                 var customer_code = item.attr('customer_code');
                 var role_id = item.attr('role_id');
-                var sign_expire_date =item.attr('sign_expire_date');
+                var sign_expire_date = item.attr('sign_expire_date');
 
                 $('#director_id').val(customer_code);
                 $('#role_id').val(role_id);
-                $('#sign_permission').prop('checked',sign_permission == 'True');
-                $('#sign_enough').prop('checked',sign_enough == 'True');
+                $('#sign_permission').prop('checked', sign_permission == 'True');
+                $('#sign_enough').prop('checked', sign_enough == 'True');
                 $('#sign_expire_date').val(sign_expire_date)
-
 
 
             })
