Readl Customer register added to menu

--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -83,6 +83,11 @@
                     </div>
                     <div id="menu-body" class="panel-body">
                         <div class="row">
+                            <a href="{% url 'customer:real_register' %}">
+                                تعریف مشتری حقوقی
+                            </a>
+                        </div>
+                        <div class="row">
                             <a href="{% url 'grant:start' %}">
                                 ثبت درخواست وام جدید
                             </a>
